--- a/public/login/login.html
+++ b/public/login/login.html
@@ -26,7 +26,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="./login.css" />
   </head>
   <body>
     <header>
@@ -56,7 +57,7 @@
                 <a class="nav-link" href="#">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link auth"></a>
+                <a class="nav-link" href="#">Login</a>
               </li>
             </ul>
           </div>
@@ -64,19 +65,28 @@
       </nav>
     </header>
     <main>
-      <div class="loader-div">
-        <div class="spinner-border text-primary" role="status">
-          <span class="visually-hidden" id="loader">Loading...</span>
-        </div>
-      </div>
-      <div>
-        <div
-          class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 gap-4"
-          id="productDiv"
-        ></div>
+      <div class="container rounded shadow-sm signup">
+        <h3 class="headers">Login</h3>
+        <p class="" id="message"></p>
+        <form method="POST" id="loginForm">
+          <label for="email" class="form-label">Email:</label>
+          <input type="email" name="email" id="email" class="form-control" />
+          <label for="password" class="form-label">Password:</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="form-control"
+          />
+          <input type="submit" value="Login" class="btn btn-lg rounded" />
+          <p>
+            New user?
+            <a href="../signup/signup.html" class="page">Signup</a>
+          </p>
+        </form>
       </div>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="index.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
