--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -78,9 +78,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">
-                Add New product
-              </h1>
+              <h1 class="modal-title fs-5" id="model-label">Add New product</h1>
               <button
                 type="button"
                 class="btn-close"
@@ -127,10 +125,16 @@
                   id="desc"
                   rows="3"
                 ></textarea>
+                <input type="hidden" id="hidden-input" />
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn edit" data-bs-dismiss="modal">
+              <button
+                type="button"
+                class="btn edit"
+                id="closeBtn"
+                data-bs-dismiss="modal"
+              >
                 Close
               </button>
               <button type="button" class="btn" id="saveBtn">Save</button>
