--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-lg custom-nav">
         <div class="container-fluid nav-div">
-          <a class="navbar-brand" href="../index.html">Puranic Health</a>
+          <h1 class="brand">Puranic Health</h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -48,16 +48,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto" id="nav-id">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" id="home" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Category</a>
+                <a class="nav-link" href="../category-page/category.html"
+                  >Category</a
+                >
+              </li>
+              <li class="nav-item cartLink">
+                <a class="nav-link" href="../cart-page/cart.html">Cart</a>
+                <div class="badge"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
+                <a class="nav-link" href="../orders-page/order.html">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link auth" href="../login/login.html"></a>
+                <a class="nav-link auth"></a>
               </li>
             </ul>
           </div>
