--- a/public/category-page/category.html
+++ b/public/category-page/category.html
@@ -27,13 +27,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="./signup.css" />
+    <link rel="stylesheet" href="category.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg custom-nav">
         <div class="container-fluid nav-div">
-          <h1 class="navbar-brand">Puranic Health</h1>
+          <h1 class="brand">Puranic Health</h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -48,21 +48,20 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto" id="nav-id">
               <li class="nav-item">
-                <a class="nav-link" id="home" href="#">Home</a>
+                <a class="nav-link" id="home" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../category-page/category.html"
-                  >Category</a
-                >
+                <a class="nav-link" href="#">Category</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item cartLink">
                 <a class="nav-link" href="../cart-page/cart.html">Cart</a>
+                <div class="badge"></div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../orders-page/order.html">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../login/login.html">Login</a>
+                <a class="nav-link auth"></a>
               </li>
             </ul>
           </div>
@@ -70,38 +69,19 @@
       </nav>
     </header>
     <main>
-      <div class="container rounded shadow-sm signup">
-        <h3 class="headers">Sign Up</h3>
-        <p class="" id="message"></p>
-        <form method="POST" id="signUpForm">
-          <label for="name" class="form-label">Full Name:</label>
-          <input
-            type="text"
-            name="name"
-            id="name"
-            class="form-control"
-            autofocus="true"
-          />
-          <label for="email" class="form-label">Email:</label>
-          <input type="email" name="email" id="email" class="form-control" />
-          <label for="phone" class="form-label" aria-required="">Phone:</label>
-          <input type="number" name="phone" id="phone" class="form-control" />
-          <label for="password" class="form-label">Password:</label>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            class="form-control"
-          />
-          <input type="submit" value="Sign Up" class="btn btn-lg rounded" />
-          <p>
-            Existing user?
-            <a href="../login/login.html" class="page">Login</a>
-          </p>
-        </form>
+      <div class="loader-div">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden" id="loader">Loading...</span>
+        </div>
+      </div>
+      <div>
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 gap-4"
+          id="categoryDiv"
+        ></div>
       </div>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="signup.js"></script>
+    <script src="category.js"></script>
   </body>
 </html>
