--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <header>
       <nav class="navbar navbar-expand-lg custom-nav">
         <div class="container-fluid nav-div">
-          <a class="navbar-brand" href="#">Puranic Health</a>
+          <h1 class="brand">Puranic Health</h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -47,13 +47,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto" id="nav-id">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" id="home" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Category</a>
+                <a class="nav-link" href="./category-page/category.html"
+                  >Category</a
+                >
+              </li>
+              <li class="nav-item cartLink">
+                <a class="nav-link" href="./cart-page/cart.html">Cart</a>
+                <div class="badge"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
+                <a class="nav-link" href="./orders-page/order.html">Orders</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link auth"></a>
@@ -70,6 +76,7 @@
         </div>
       </div>
       <div>
+        <h4 class="headers" id="title"></h4>
         <div
           class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 gap-4"
           id="productDiv"
